chore: code clean-up